# artemis_simulation

./: .gitignore  CMakeLists.txt  README.md  package.xml
artemis_ardupilot/: CMakeLists.txt  package.xml
artemis_ardupilot/cmake/: setup_sitl.py
artemis_ardupilot/env_hook/: artemis_ardupilot.sh.in
artemis_ardupilot/scripts/: sim_vehicle
artemis_description/: CMakeLists.txt  package.xml
artemis_description/urdf/: drone.urdf
artemis_gazebo/: CMakeLists.txt  package.xml
artemis_gazebo/env_hook/: artemis_gazebo.sh.in
artemis_gazebo/scripts/: sim_artemis
cmake/: setup_sitl.py
resources/: locations.txt
scripts/: sim_vehicle
