<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
    <name>artemis_ardupilot</name>
    <version>0.0.0</version>
    <description>Ardupilot build for Artemis</description>
    <maintainer email="philippewarren31@gmail.com">warp</maintainer>
    <license>Apache License 2.0</license>

    <buildtool_depend>ament_cmake</buildtool_depend>

    <build_depend>git</build_depend>
    <build_depend>python3</build_depend>
    <build_depend>gtk3</build_depend>
    <!-- Installed via pip, not in rosded, custom file in repo "artemis" TODO -->
    <!-- <build_depend>attrdict</build_depend> -->
    <!-- <build_depend>python3-matplotlib</build_depend> -->
    <!-- <build_depend>python3-pil</build_depend> -->
    <!-- <build_depend>kiwisolver</build_depend> -->
    <!-- <build_depend>wxpython</build_depend> -->
    <!-- <build_depend>python-pymavlink</build_depend> -->
    <!-- <build_depend>MAVProxy</build_depend> -->

    <test_depend>ament_lint_auto</test_depend>
    <test_depend>ament_lint_common</test_depend>

    <export>
        <build_type>ament_cmake</build_type>
    </export>
</package>
