<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
    <name>artemis_description</name>
    <version>0.0.0</version>
    <description>Artemis project decriptions</description>
    <maintainer email="philippewarren31@gmail.com">warp</maintainer>
    <license>Apache License 2.0</license>

    <buildtool_depend>ament_cmake</buildtool_depend>

    <depend>xacro</depend>
    <depend>urdf</depend>
    <exec_depend>joint-state-publisher</exec_depend>

    <test_depend>ament_lint_auto</test_depend>
    <test_depend>ament_lint_common</test_depend>

    <export>
        <build_type>ament_cmake</build_type>
    </export>
</package>
